# Brain-Connectivity-GCN

./: .gitignore  ACCURACY_GUIDE.md  CHANGES.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  EXPANSION_SUMMARY.md  EXPERIMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODELS_AND_PIPELINE.md  MODEL_CARD.md  README.md  SPACE_README.md  create_synthetic_data.py  deployment_summary.py  diagnose_data.py  ensemble_predict.py  eval_abide2.py  examples_experiments.py  examples_new_features.py  finetune_llm.py  generate_finetune_data.py  generate_plan_pdf.py  master.py  optimize_accuracy.py  predict.py  pyproject.toml  run_hpo.py  serve.py  train.py  train_optimized.py  verify_deployment.sh
.github/workflows/: tests.yml
brain_gcn/: ablation.py  ablation_cli.py  cv_cli.py  eval_cli.py  experiments.py  finetune_main.py  hpo.py  hpo_cli.py  main.py  population_main.py  pretrain_main.py
brain_gcn/models/: __init__.py  advanced_models.py  brain_gcn.py  dynamic_fc.py  mae.py  population_gcn.py  registry.py
brain_gcn/tasks/: __init__.py  classification.py
brain_gcn/utils/: cross_validation.py  evaluation.py  graph_conv.py  grl.py  tracking.py  visualization.py
checkpoints/adv_brain_mode_k16_site_loso_usm/: run_config.json
checkpoints/adv_fc_mlp/: run_config.json
checkpoints/brain_mode_k16_stra/: run_config.json
checkpoints/dynamic_fc_attn/: run_config.json
checkpoints/fc_mlp_fisherz_gpu/: run_config.json
checkpoints/gcn/: run_config.json
checkpoints/graph_temporal/: run_config.json
checkpoints/gru/: run_config.json
checkpoints/population_gcn/: best_auc0.564.pt  best_auc0.568.pt
finetune_data/: asd_interpreter.jsonl
hf_space/: _charts.py  app.py
hf_space/checkpoints/: aal_caltech.ckpt  aal_cmu.ckpt  aal_kki.ckpt  aal_leuven_1.ckpt  aal_leuven_2.ckpt  aal_max_mun.ckpt  aal_nyu.ckpt  aal_ohsu.ckpt  aal_olin.ckpt  aal_pitt.ckpt  aal_sbl.ckpt  aal_sdsu.ckpt  aal_stanford.ckpt  aal_trinity.ckpt  aal_ucla.ckpt  aal_ucla_1.ckpt  aal_ucla_2.ckpt  aal_um.ckpt  aal_um_1.ckpt  aal_um_2.ckpt  aal_usm.ckpt  aal_yale.ckpt  cc200_caltech.ckpt  cc200_cmu.ckpt  cc200_kki.ckpt  cc200_leuven_1.ckpt  cc200_leuven_2.ckpt  cc200_max_mun.ckpt  cc200_nyu.ckpt  cc200_ohsu.ckpt  cc200_olin.ckpt  cc200_pitt.ckpt  cc200_sbl.ckpt  cc200_sdsu.ckpt  cc200_stanford.ckpt  cc200_trinity.ckpt  (+6 more)
painconnect_rd/: README.md  pyproject.toml
painconnect_rd/docs/: evaluation.md  schema.md
painconnect_rd/src/painconnect_rd/: __init__.py  models.py  pipeline.py
painconnect_rd/tests/: test_schema.py
results/: experiment_summary_site_holdout.csv  experiment_summary_stratified.csv  full_run_stratified.csv  smoke_experiment_summary.csv  smoke_fc_degree.csv
tests/: __init__.py  conftest.py  test_advanced_models_integration.py  test_dataset.py  test_download.py  test_graph_conv.py  test_preprocess.py
(+17 files in other folders)
