[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_gcn"
version = "0.1.0"
description = "Cross-site adversarial graph neural networks for brain-connectivity research"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Raghav Aryen" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "pytorch-lightning>=1.5.0",
    "torchmetrics>=0.7.0",
    "scikit-learn>=0.24.0",
    "nilearn>=0.7.1",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "optuna>=2.10.0",
    "boto3>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/Yatsuiii/Brain-Connectivity-GCN"
Repository = "https://github.com/Yatsuiii/Brain-Connectivity-GCN"
Demo = "https://huggingface.co/spaces/Yatsuiii/BrainConnect-ASD"
Issues = "https://github.com/Yatsuiii/Brain-Connectivity-GCN/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["brain_gcn*"]
